# AngelScript

./: CMakeLists.txt  README.rst
sdk/angelscript/projects/cmake/: CMakeLists.txt
sdk/angelscript/projects/cmake/cmake/: Config.cmake.in
